--- a/style/style.css
+++ b/style/style.css
@@ -98,7 +98,7 @@ section {
     color: white;
     margin: 30px auto;
     padding: 20px;
-    max-width: 1000px;
+    max-width: 1350px;
     background-color: #2d2b2b;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
@@ -202,6 +202,24 @@ footer {
 
 #contact button:hover {
     background-color: #8e44ad; /* Rose-violet plus foncé */
+}
+
+#ecole-entreprise {
+    padding: 40px;
+    
+}
+
+#ecole-entreprise .logo-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    text-align: center;
+}
+
+#ecole-entreprise a img {
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 #realisation-mission {
